--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git-revision-2</h1>
+    <h1>git-revision-2</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis explicabo, unde eligendi deleniti maiores perspiciatis perferendis accusamus voluptatem earum, non odio. Quasi veritatis laborum corrupti. Blanditiis perferendis nobis nam reprehenderit!</p>
     
 </body>
